# interpretable-missense-classification

./: .gitignore  LICENSE  Makefile  README.md  REPRODUCE.md  conftest.py  pyproject.toml  requirements.txt
configs/: baseline.yaml  data.yaml  esm2.yaml
data/: README.md
reports/paper/: Makefile  main.aux  main.bbl  main.blg  main.tex  references.bib
reports/presentation/: final_presentation_team19_gi2100_vsj7589.pptx
reports/tables/: ablation_features.csv  all_results.csv  baseline_val_metrics.csv  calibration.csv  combined_head_val_metrics.csv  dataset_stats.csv  efficiency.csv  esm2_head_val_metrics.csv  external_results.csv  pairwise_tests.csv  per_gene_auroc.csv  results.csv  rf_esm2_disagreement.csv
scripts/: 01_download.py  02_preprocess_clinvar.py  03_map_to_proteins.py  04_make_splits.py  05_extract_features.py  06_extract_esm2_embeddings.py  07_train_baseline.py  08_train_esm2_head.py  09_evaluate.py  10_compare_external.py  11_make_figures.py  12_train_combined.py  13_ablation_features.py  build_supplementary.sh
src/imc/: __init__.py
src/imc/data/: __init__.py  clinvar.py  mapping.py  splits.py  uniprot.py
src/imc/eval/: __init__.py  calibration.py  external.py  metrics.py
src/imc/features/: __init__.py  embeddings.py  handcrafted.py
src/imc/models/: __init__.py  baseline.py  combined.py  head.py
src/imc/training/: __init__.py  checkpoint.py  train_head.py
src/imc/utils/: __init__.py  io.py  logging.py  seed.py
src/imc/viz/: __init__.py
tests/: test_smoke.py
